feat(manage): add ?search= query param to 10 manage list endpoints
Add optional server-side search (partial, case-insensitive) to:
- /products (name + description + category.name, DB-paged)
- /supplies/variants (supply.name)
- /tables (tableNumber + name)
- /workers (name + document)
- /areas (name)
- /categories (name)
- /option-categories (name)
- /suppliers (name)
- /purchases (notes + supplier.name, precedence supplierId > search > from/to > all)
- /orders (product/option names via JPQL join, AND-combine with status/date)

Per aggregate: domain port gains new method, JPA repo gains derived/JPQL
query, adapter maps Entity->Domain unchanged, controller branches on
search != null && !search.isBlank(). When search is absent or blank,
existing behavior is preserved verbatim. Filtering is applied at the DB
level so counts are correct across the full result set — never sliced in
memory. Response shapes (List<...>, Page<...>, PageResponse<...>) and
DTOs are unchanged.

No Flyway migration, no schema change. OpenAPI @Operation + @Parameter
annotations updated on all 10 endpoints. Hexagonal layering preserved
(domain/ subdirs free of Spring/JPA imports).

Tests: 11+ test files cover match/no-match/blank/combined/precedence
paths for each endpoint; ./harness/harness.sh exits 0 (all 8 sections
[OK]).